--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   "bugs": {
     "url": "https://github.com/azeemjoseph/nodejs-nginx-load-balancer/issues"
   },
-  "homepage": "https://github.com/azeemjoseph/nodejs-nginx-load-balancer#readme"
-},
-"dependencies": {
-  "body-parser": "^1.19.0",
-  "cors": "^2.8.5",
-  "dotenv": "^10.0.0",
-  "express": "^4.17.1",
-  "mysql2": "^2.2.5",
-  "sequelize": "^6.6.5",
-  "wait-port": "^0.2.9"
-},
-"devDependencies": {
-  "jasmine": "^3.8.0",
-  "nodemon": "^2.0.12",
-  "sequelize-cli": "^6.2.0"
+  "homepage": "https://github.com/azeemjoseph/nodejs-nginx-load-balancer#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.5",
+    "wait-port": "^0.2.9"
+  },
+  "devDependencies": {
+    "jasmine": "^3.8.0",
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0"
+  }
 }
